--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
         "husky": "^0.14.3",
         "jest": "^21.2.1",
         "nodemon": "^1.17.2",
+        "react-redux": "^5.0.7",
+        "redux": "^3.7.2",
         "npm-run-all": "^4.1.3",
         "webpack": "^4.20.2",
         "webpack-bundle-analyzer": "*",
